Updates skin, champ control anmes

--- a/src/Leagueoflegends.Support/Datas/Skins.yml
+++ b/src/Leagueoflegends.Support/Datas/Skins.yml
@@ -5,6 +5,7 @@
   imageUrl: skin_aatrox_11.jpg
   isPurchased: false
 - name: Aatrox
+  skinName: Mecha Aatrox
   imageUrl: skin_aatrox_02.jpg
   isPurchased: true
 - name: Aatrox
