--- a/src/Leagueoflegends.Support/Datas/SubMenus.yml
+++ b/src/Leagueoflegends.Support/Datas/SubMenus.yml
@@ -1,87 +1,116 @@
 - name: OVERVIEW
   seq: 1
   category: HOME
+  isUsed: true
 - name: PRESEASON
   seq: 2
   category: HOME
+  isUsed: false
 - name: PATCH NOTES
   seq: 3
   category: HOME
+  isUsed: false
 - name: AVATAR CREATE
   seq: 4
   category: HOME
+  isUsed: false
 - name: HUB
   seq: 5
   category: CLASH
+  isUsed: false
 - name: FIND A TEAM
   seq: 6
   category: CLASH
+  isUsed: false
 - name: BRAKET
   seq: 7
   category: CLASH
+  isUsed: false
 - name: WINNERS
   seq: 8
   category: CLASH
+  isUsed: true
 - name: WARDS
   seq: 9
   category: CLASH
+  isUsed: false
 - name: SUMMARY
   seq: 10
   category: PROFILE
+  isUsed: false
 - name: MATCH HISTORY
   seq: 11
   category: PROFILE
+  isUsed: true
 - name: RANKED
   seq: 12
   category: PROFILE
+  isUsed: false
 - name: HIGHLIGHTS
   seq: 13
   category: PROFILE
+  isUsed: false
 - name: STATS
   seq: 14
   category: PROFILE
+  isUsed: false
 - name: CHAMPIONS
   seq: 15
   category: COLLECTION
+  isUsed: true
 - name: SKINS
   seq: 16
   category: COLLECTION
+  isUsed: true
 - name: EMOTES
   seq: 17
   category: COLLECTION
+  isUsed: true
 - name: RUNES
   seq: 18
   category: COLLECTION
+  isUsed: true
 - name: SPELLS
   seq: 19
   category: COLLECTION
+  isUsed: false
 - name: ITEMS
   seq: 20
   category: COLLECTION
+  isUsed: true
 - name: ICONS
   seq: 21
   category: COLLECTION
+  isUsed: true
 - name: WARDS
   seq: 22
   category: COLLECTION
+  isUsed: true
 - name: CHROMAS
   seq: 23
   category: COLLECTION
+  isUsed: false
 - name: FEATURED
   seq: 24
   category: STORE
+  isUsed: true
 - name: CHAMPIONS
   seq: 25
   category: STORE
+  isUsed: true
 - name: SKINS
   seq: 26
   category: STORE
+  isUsed: true
 - name: TFT
   seq: 27
   category: STORE
+  isUsed: true
 - name: LOOT
   seq: 28
   category: STORE
+  isUsed: true
 - name: ACCESSORIES
   seq: 29
   category: STORE
+  isUsed: false
