--- a/src/Leagueoflegends/Leagueoflegends.csproj
+++ b/src/Leagueoflegends/Leagueoflegends.csproj
@@ -41,6 +41,7 @@
     <ProjectReference Include="..\Leagueoflegends.Home\Leagueoflegends.Home.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Main\Leagueoflegends.Main.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Navigate\Leagueoflegends.Navigate.csproj" />
+    <ProjectReference Include="..\Leagueoflegends.Shop\Leagueoflegends.Shop.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Social\Leagueoflegends.Social.csproj" />
     <ProjectReference Include="..\Leagueoflegends.Tft\Leagueoflegends.Tft.csproj" />
   </ItemGroup>
